--- a/Licence/L1S1.html
+++ b/Licence/L1S1.html
@@ -34,15 +34,29 @@
     <hr>
         
     <div id="html2">
-        <a href="#">
+
+        <a href="L1S1/SM.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2>Algèbre 1</h2>
+                    <h3>Structure machine 1</h3>
                     <p> Licence 1 | Semestre 1</p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="../Camera/SM.jpg" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+
+        <a href="L1S1/Algebr.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h3>Algèbre 1</h3>
+                    <p> Licence 1 | Semestre 1</p>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/Algebr.PNG" alt="Image circulaire">
                 </div>
             </div>
         </a>
