--- a/Licence/L1S1/Algebr.html
+++ b/Licence/L1S1/Algebr.html
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Algebr/Série 3 algèbre 1 24.pdf">
+                    <a href="Algebr/Série 3 2022.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série sur les structures algèbriques</p>                   
                     </a>
