--- a/Licence/L3S6.html
+++ b/Licence/L3S6.html
@@ -38,7 +38,7 @@
         <a href="L3S6/AB.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h3>Applications mobiles</h3>
+                    <h4>Applications mobiles</h4>
                     <p> Licence 3 | Semestre 6 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
@@ -48,10 +48,24 @@
             </div>
         </a>
 
+        <a href="L3S6/SDD.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h4>Données semi-</h4>
+                    <h4>strcuturées</h4>
+                    <p> Licence 3 | Semestre 6 </p>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/SECU.jpg" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+
         <a href="L3S6/SECU.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h3>Sécurité informatique</h3>
+                    <h4>Sécurité informatique</h4>
                     <p> Licence 3 | Semestre 6 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
