--- a/Licence/L3S6/SDD.html
+++ b/Licence/L3S6/SDD.html
@@ -55,14 +55,12 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Introduction</p>                   
                     </a>
+                </div>
+                <div class="pdf_Cour">
                     <a href="SDD/5.pptx">
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>Données semi-strcuturées</p>                   
                     </a>
-                    <!--<a href="">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
-                    </a>-->
                 </div>
                 <hr>  
 
@@ -81,6 +79,8 @@
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>eXtensible Markup Language: XML 2</p>                   
                     </a>
+                </div>
+                <div class="pdf_Cour">
                     <a href="SDD/6.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>TP N°2 - XML</p>                   
@@ -89,10 +89,6 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>TP N°2 - XML avec Solution</p>                   
                     </a>
-                    <!--<a href="">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
-                    </a>-->
                 </div>
                 <hr>
 
@@ -107,22 +103,20 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Cours DTD + Tp3</p>                   
                     </a>
-                    <a href="SDD/8.pptx">
-                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
-                        <p>Document Type Définition (DTD) "Exercices"</p>                   
-                    </a>
                     <a href="SDD/10.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Solutions série DTD</p>                   
+                    </a>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="SDD/8.pptx">
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
+                        <p>Document Type Définition (DTD) "Exercices"</p>                   
                     </a>
                     <a href="SDD/11.pptx">
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>XML-schéma</p>                   
                     </a>
-                    <!--<a href="">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
-                    </a>-->
                 </div>
                 <hr>
 
