--- a/Licence/L3S6.html
+++ b/Licence/L3S6.html
@@ -62,6 +62,19 @@
             </div>
         </a>
 
+        <a href="L3S6/AI.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h4>Intelligence artificielle</h4>
+                    <p> Licence 3 | Semestre 6 </p>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/AI.jpg" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+
         <a href="L3S6/SECU.html">
             <div class="html2_C">
                 <div class="text_C">
