--- a/Licence/L3S6.html
+++ b/Licence/L3S6.html
@@ -70,7 +70,7 @@
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="../Camera/AI.jpg" alt="Image circulaire">
+                    <img src="../Camera/AI.png" alt="Image circulaire">
                 </div>
             </div>
         </a>
