--- a/Licence/L3S6/AI.html
+++ b/Licence/L3S6/AI.html
@@ -128,7 +128,9 @@
 
                 <div class="no-overflow">
                     <p dir="ltr" style="text-align: left;">Lien pour télécharger l'éditeur</p>
-                    <p dir="ltr" style="text-align: left;">https://www.swi-prolog.org/<br></p>
+                    <a href="https://www.swi-prolog.org/">
+                        <p dir="ltr" style="text-align: left;">https://www.swi-prolog.org/<br></p>s
+                    </a>
                 </div>
 
                 <div class="pdf_Cour">
