--- a/Licence/L3S6/AI.html
+++ b/Licence/L3S6/AI.html
@@ -129,7 +129,7 @@
                 <div class="no-overflow">
                     <p dir="ltr" style="text-align: left;">Lien pour télécharger l'éditeur</p>
                     <a href="https://www.swi-prolog.org/">
-                        <p dir="ltr" style="text-align: left;">https://www.swi-prolog.org/<br></p>s
+                        <p dir="ltr" style="text-align: left;">https://www.swi-prolog.org/<br></p>
                     </a>
                 </div>
 
