--- a/Licence/L3S6/SDD.html
+++ b/Licence/L3S6/SDD.html
@@ -56,7 +56,7 @@
                         <p>Introduction</p>                   
                     </a>
                 </div>
-                <div class="pdf_Cour">
+                <div class="pdf_Cour1">
                     <a href="SDD/5.pptx">
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>Données semi-strcuturées</p>                   
@@ -70,7 +70,7 @@
                         <p>Chapitre 2: XML</p>
                     </div>
                 </div>
-                <div class="pdf_Cour">
+                <div class="pdf_Cour1">
                     <a href="SDD/2.pptx">
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>eXtensible Markup Language: XML 1</p>                   
@@ -108,7 +108,7 @@
                         <p>Solutions série DTD</p>                   
                     </a>
                 </div>
-                <div class="pdf_Cour">
+                <div class="pdf_Cour1">
                     <a href="SDD/8.pptx">
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>Document Type Définition (DTD) "Exercices"</p>                   
@@ -126,7 +126,7 @@
                         <p>Chapitre 4: Galaxie XML </p>
                     </div>
                 </div>
-                <div class="pdf_Cour">
+                <div class="pdf_Cour1">
                     <a href="SDD/12.ppt">
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>XPATH-XSLT-XSD</p>                   
