--- a/Licence/L3S6/SDD.html
+++ b/Licence/L3S6/SDD.html
@@ -131,10 +131,18 @@
                         <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
                         <p>XPATH-XSLT-XSD</p>                   
                     </a>
-                    <!--<a href="">
+                </div>
+                <div class="pdf_Cour">
+                    <a href="SDD/DSS_TP_5_avec_solution.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p></p>                   
-                    </a>-->
+                        <p>Série de tp 5 : XSL, SXLT.</p>                   
+                    </a>
+                </div>
+                <div class="pdf_Cour1">
+                    <a href="SDD/xquery.ppt">
+                        <i class="fa-solid fa-file-powerpoint" style="color: #ff7300;"></i>
+                        <p>xquery</p>                   
+                    </a>
                 </div>
                 <hr>
 
