--- a/Licence/L2S4.html
+++ b/Licence/L2S4.html
@@ -61,11 +61,11 @@
             </div>
         </a>
 
-        <a href="#">
+        <a href="L2S4/DW.html">
             <div class="html2_C">
                 <div class="text_C">
                     <h3>Développement Web</h3>
-                    <p> Licence  | Semestre </p>
+                    <p> Licence 2 | Semestre 4</p>
                     <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
                 </div>
                 <div class="image_C">
