--- a/Licence/L2S4/DW.html
+++ b/Licence/L2S4/DW.html
@@ -44,6 +44,18 @@
                 <h2></h2>
                 
 
+                <div class="no-overflow">
+                    <p dir="ltr" style="text-align: left;
+                                        font-size: 16px;
+                                        font-weight: 800;">Plan du cours</p>
+                    <p dir="ltr" style="text-align: left;">- Partie I: Généralités</p>
+                    <p dir="ltr" style="text-align: left;">- Partie II: HTML</p>
+                    <p dir="ltr" style="text-align: left;">- Partie III: CSS</p>
+                    <p dir="ltr" style="text-align: left;">- Partie IV: JavaScript</p>
+                    <p dir="ltr" style="text-align: left;">- Partie V: PHP<br></p>
+                </div>
+                <hr>
+
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
