--- a/Licence/L2S4/TL.html
+++ b/Licence/L2S4/TL.html
@@ -115,10 +115,18 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="TL/Chapitre 04.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Automates et calculabilité dzs langages</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
                     </a>-->
+                </div>
+                <div class="no-overflow1">
+                    <p dir="ltr" style="text-align: left;">Chapitre intermédiaire, introductif aux automates 
+                        (Sans série de TD ni série de TP)<br></p>
                 </div>
                 <hr>
 
@@ -129,10 +137,19 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="TL/Chapitre 05.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Automates à états finis (AEF)</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
                     </a>-->
+                </div>
+                <div class="no-overflow1">
+                    <p dir="ltr" style="text-align: left;">+ Série de TD N°3</p>
+                    <p dir="ltr" style="text-align: left;">+ Série de TP N°3 (Quelques notions utiles de 
+                        programmation + Des exercices  qui  seront donnés sur place pendant les séances de TP)<br></p>
                 </div>
                 <hr>
 
@@ -143,10 +160,21 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="TL/Chapitre 06.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Expressions régulières et équivalences</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
                     </a>-->
+                </div>
+                <div class="no-overflow1">
+                    <p dir="ltr" style="text-align: left;">+ Série de TD N°4</p>
+                    <p dir="ltr" style="text-align: left;">+ Série de TP N°4 :</p>
+                    <p dir="ltr" style="text-align: left;">- Avec quelques notions utiles de programmation
+                         avec les expressions régulières. </p>
+                    <p dir="ltr" style="text-align: left;">- La suite des exercices sera donnée sur place en TP.<br></p>
                 </div>
                 <hr>
 
@@ -157,10 +185,17 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="TL/Chapitre 07.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Langages algébriques : Automates à pile et grammaires - Type 2 -</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
                     </a>-->
+                </div>
+                <div class="no-overflow1">
+                    <p dir="ltr" style="text-align: left;">+ Série de TD N°5<br></p>
                 </div>
                 <hr>
 
