--- a/Licence/L3S6/AB.html
+++ b/Licence/L3S6/AB.html
@@ -69,6 +69,16 @@
                     <p dir="ltr" style="text-align: left;">Ce fichier contient la série de TPs qui couvre tout le 
                         semestre.<br></p>
                 </div>
+                <div class="pdf_Cour">
+                    <a href="AB/Exam-Dev-Mob-S06-L03.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen App Mobile 2022-2023 </p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
                 <hr>  
 
                 <div class="text_Cour">
@@ -150,6 +160,23 @@
                         <p>développement des interfaces utilisateurs</p>
                     </div>
                 </div>
+                <div class="no-overflow">
+                    <p dir="ltr" style="text-align: left;">développement des interfaces utilisateurs</p>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="AB/c002-p2-les_boites_de_dialogues.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Les boites de dialogue</p>                   
+                    </a>
+                    <a href="AB/Création des applications interactives.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Création des interfaces avec evennement de clique</p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
                 <hr>
 
                 <div class="text_Cour">
@@ -157,6 +184,31 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                         <p>Interfaces utilisateurs avancées</p>
                     </div>
+                </div>
+                <div class="no-overflow">
+                    <p dir="ltr" style="text-align: left;">Interfaces utilisateurs avancées</p>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="AB/2021-L3-S6-User_Interface-navigation-enre-Activities.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>2021-L3-S6-User_Interface-navigation-enre-Activities</p>                   
+                    </a>
+                    <a href="AB/c002-p3-communication_entre_les_activity.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Communication_entre_les_activity</p>                   
+                    </a>
+                    <a href="AB/utilisation_des_listview.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>utilisation des ListView</p>                   
+                    </a>
+                    <a href="AB/résumécours-chapitre2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>résumé cours 2</p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
                 </div>
                 <hr>
 
@@ -174,6 +226,27 @@
                         <p>Les base de données</p>
                     </div>
                 </div>
+                <div class="no-overflow">
+                    <p dir="ltr" style="text-align: left;">Les base de données</p>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="AB/2021-L3-S6-Persistance.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>2021-L3-S6-Persistance</p>                   
+                    </a>
+                    <a href="AB/exemple_d’utilisation_d’une_base_de_données_locale.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Example de DBB SQLite</p>                   
+                    </a>
+                    <a href="AB/dbhelper.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>La classe DBHelper</p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
                 <hr>
 
                 <div class="text_Cour">
@@ -181,6 +254,19 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                         <p>Les bases de données distantes</p>
                     </div>
+                </div>
+                <div class="no-overflow">
+                    <p dir="ltr" style="text-align: left;">Les bases de données distantes</p>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="AB/2021-L3-S6-BDD-REST-API.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>2021-L3-S6-BDD-REST-API</p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
                 </div>
 
                 <!--<div class="pdf_Cour">
